# mysql-async-float-precision-loss-repro

./: Cargo.toml
src/: main.rs
