[package]
name = "mysql_async_repro"
version = "0.1.0"
authors = ["Tom Houlé <tom@tomhoule.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# mysql_async = { path = "/home/tom/src/mysql_async" }
mysql_async = "*"
tokio = "0.2.13"
